Wrap stings in gettex, fix UI and add actual strings in Make Stake modal

--- a/apps/block_scout_web/assets/css/components/stakes/_modal_stake.scss
+++ b/apps/block_scout_web/assets/css/components/stakes/_modal_stake.scss
@@ -1,6 +1,6 @@
 .modal-stake {
   max-width: 100%;
-  width: 460px;
+  width: 560px;
 
   @include media-breakpoint-down(sm) {
     margin-left: auto;
